Updated overall styling and spacing

--- a/Style Guide/Style_guide.html
+++ b/Style Guide/Style_guide.html
@@ -111,7 +111,7 @@
                 <h1>Sample of h1 heading.</h1>
                 <h2>Sample of h2 heading.</h2>
                 <h3>Sample of h3 heading.</h3>
-                <h4>Sample of h4 heading.</h4>
+                <h4 class="sampleH4">Sample of h4 heading.</h4>
           </section>
 
       <section>
@@ -123,7 +123,7 @@
                 <code>&lt;p&gt;Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus et mollis tortor. Nunc porta augue ac quam lobortis, in porta risus varius.&lt;/p&gt;</code>
 
             <h4>Rendered element:</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus et mollis tortor. Nunc porta augue ac quam lobortis, in porta risus varius.</p>
+                <p class="sampleParagraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus et mollis tortor. Nunc porta augue ac quam lobortis, in porta risus varius.</p>
       </section>
 
       <section>
