--- a/Style Guide/Style_guide.html
+++ b/Style Guide/Style_guide.html
@@ -340,7 +340,7 @@
 
               <!--Grid size 1of8-->
               <div class="grid-col-1of8">
-                <p class = "grid_box">1/8</p>
+                <p class = "grid_box eighth">1/8</p>
               </div>
 
               <div class="grid-col-1of8">
