--- a/Style Guide/Style_guide.html
+++ b/Style Guide/Style_guide.html
@@ -340,35 +340,35 @@
 
               <!--Grid size 1of8-->
               <div class="grid-col-1of8">
-                <p class = "grid_box eighth">1/8</p>
+                <p class = "grid_box bottom">1/8</p>
               </div>
 
               <div class="grid-col-1of8">
-                <p class = "grid_box">1/8</p>
+                <p class = "grid_box bottom">1/8</p>
               </div>
 
               <div class="grid-col-1of8">
-                <p class = "grid_box">1/8</p>
+                <p class = "grid_box bottom">1/8</p>
               </div>
 
               <div class="grid-col-1of8">
-                <p class = "grid_box">1/8</p>
+                <p class = "grid_box bottom">1/8</p>
               </div>
 
               <div class="grid-col-1of8">
-                <p class = "grid_box">1/8</p>
+                <p class = "grid_box bottom">1/8</p>
               </div>
 
               <div class="grid-col-1of8">
-                <p class = "grid_box">1/8</p>
+                <p class = "grid_box bottom">1/8</p>
               </div>
 
               <div class="grid-col-1of8">
-                <p class = "grid_box">1/8</p>
+                <p class = "grid_box bottom">1/8</p>
               </div>
 
               <div class="grid-col-1of8">
-                <p class = "grid_box">1/8</p>
+                <p class = "grid_box bottom">1/8</p>
               </div>
 
             </div>
@@ -399,11 +399,11 @@
 
             <!--navigation grid(inside): Another grid for navigation elements-->
             <div class = "grid-col-1of4">
-               <p class = "grid_box">1/4</p>
+               <p class = "grid_box bottom">1/4</p>
             </div>
 
             <div class = "grid-col-3of4">
-              <p class = "grid_box">3/4</p>
+              <p class = "grid_box bottom">3/4</p>
             </div>
 
           </div>
