--- a/Template_Structure/purchase1.html
+++ b/Template_Structure/purchase1.html
@@ -2,7 +2,7 @@
 
 	<head>
 
-		<title>Homepage</title>
+		<title>Add to cart</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -67,48 +67,25 @@
 			</div>
 		</div>
 
-        <!--Chef image section-->
-        <div class = "chef-list">
+		<!--purchase section-->
+		<div class = "purchase-item">
 
-        	<div class = "grid-row">
-	            <div class = "grid-col-1of4">
-	         		<h2 class = "chef-border">Chef1</h2>
-	            </div>
-
-	         	<div class = "grid-col-1of4">
-	         		<h2 class = "chef-border">Chef2</h2>
-	            </div>
-
-	         	<div class = "grid-col-1of4">
-	         		<h2 class = "chef-border">Chef3</h2>
-	            </div>
-
-	         	<div class = "grid-col-1of4">
-	         		<h2 class = "chef-border">Chef4</h2>
-	            </div>
-        	</div>
-
-		</div>
-
-		<!--footer section-->
-		<footer>
+			<!--title section-->
 			<div class = "grid-row">
-				<div class = "grid-col-10of10">
-					<div class ="footer-bkgd">
-							<ul class="footer-main">
-								<li><a href="Homepage.html">Contact Us</a></li>
-								<li><a href="Homepage.html">Security and Privavy</a></li>
-								<li><a href="Homepage.html">Term of Use</a></li>
-								<li><a href="Homepage.html"> Careers</a></li>
-								<li><a href="Homepage.html">Copyright</a></li>
-							</ul>
-					</div>
-				</div>
-	        </div>
-	        	
-		</footer>
 
+				<div class = "grid-col-3of10">
+					<h2 class = "buy-border">SAVED CHEFS</h2>
+				</div>
+
+				<div class = "grid-col-3of10">
+					<h2 class = "buy-border">IN YOUR CART</h2>
+				</div>
+
+				<div class = "grid-col-3of10">
+					<h2 class = "buy-border">INFORMATION</h2>
+				</div>
+
+		
+		</div>
 	</body>
 </html>
-
-			
