Add purchase html

--- a/Template_Structure/purchase1.html
+++ b/Template_Structure/purchase1.html
@@ -117,6 +117,7 @@
 
 					<!--purchase section-->
 					<!--purchase process2-->
+					<!--Booking part-->
 			<div class = "purchase-item">
 
 				<div class = "grid-row">
