Fix style problem and footer

--- a/Template_Structure/homepage.html
+++ b/Template_Structure/homepage.html
@@ -2,7 +2,7 @@
 
 	<head>
 
-		<title>Events</title>
+		<title>Homepage</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -43,7 +43,7 @@
 				       
 				            <div class = "grid-col-1of3">
 								<div class="web-nav">
-									<a href="Homepage.html">UPCOMING</a>	
+									<a href="event.html">UPCOMING</a>	
 				            	</div>
 				        	</div>
 
@@ -67,45 +67,30 @@
 			</div>
 		</div>
 
-		<!--Title-->
-		<div class = "upcoming-list">
-			<div class = "grid-row">
-				<div class = "grid-col-10of10">
-					<h1>UPCOMING CHEFS</h1>
-				</div>
-			</div>
-		</div>
+	
 
-        
+        <!--Chef image section-->
+        <div class = "chef-list">
+
         	<div class = "grid-row">
-				<div class = "grid-col-5of10">
-					<div class = "event-box">
-						<h2>Image</h2>
-						<p class="detail-info">Detail information</p>
-					</div>
-				</div>
+	            <div class = "grid-col-1of4">
+	         		<h2 class = "chef-border">Chef1</h2>
+	            </div>
 
-				<div class = "grid-col-5of10">
-					<div class = "event-box">
-						<h2>Image</h2>
-						<p class = "detail-info">Detail information</p>
-					</div>
-				</div>
+	         	<div class = "grid-col-1of4">
+	         		<h2 class = "chef-border">Chef2</h2>
+	            </div>
 
-				<div class = "grid-col-5of10">
-					<div class = "event-box">
-						<h2>Image</h2>
-						<p class = "detail-info">Detail information</p>
-					</div>
-				</div>
+	         	<div class = "grid-col-1of4">
+	         		<h2 class = "chef-border">Chef3</h2>
+	            </div>
 
-				<div class = "grid-col-5of10">
-					<div class = "event-box">
-						<h2>Image</h2>
-						<p class = "detail-info">Detail information</p>
-					</div>
-				</div>
-			</div>
+	         	<div class = "grid-col-1of4">
+	         		<h2 class = "chef-border">Chef4</h2>
+	            </div>
+        	</div>
+
+		</div>
 
 			<!--footer section-->
 			<footer>
@@ -151,3 +136,5 @@
 
 	</body>
 </html>
+
+			
