Change content for purchase page and footer

--- a/Template_Structure/event.html
+++ b/Template_Structure/event.html
@@ -65,6 +65,7 @@
 
         
         	<div class = "grid-row">
+        		<div class ="grid-col-10of10">
 				<div class = "grid-col-5of10">
 					<div class = "event-box">
 						<h2>Image</h2>
@@ -78,7 +79,9 @@
 						<p class = "detail-info">Detail information</p>
 					</div>
 				</div>
+			</div>
 
+			<div class ="grid-col-10of10">
 				<div class = "grid-col-5of10">
 					<div class = "event-box">
 						<h2>Image</h2>
@@ -93,6 +96,7 @@
 					</div>
 				</div>
 			</div>
+		</div>
 
 			<!--footer section-->
 			<footer>
