--- a/Template_Structure/homepage.html
+++ b/Template_Structure/homepage.html
@@ -37,15 +37,15 @@
 				        	</div>
 				       
 				            <div class = "grid-col-1of3">							
-								<a class= "web-nav" href="Homepage.html">UPCOMING</a>					            	
+								<a class= "web-nav" href="event.html">UPCOMING</a>					            	
 				        	</div>
 
 				        	<div class = "grid-col-1of3">
-								<a class= "web-nav" href="Homepage.html">ABOUT</a>
+								<a class= "web-nav" href="purchase.html">ABOUT</a>
 					    	</div>
 
 					        <div class = "grid-col-1of3">
-								<a class= "web-nav" href="purchase1.html">CART</a>		
+								<a class= "web-nav" href="purchase.html">CART</a>		
 				            </div>
 
 					</div>
