--- a/Style Guide/Style_guide.html
+++ b/Style Guide/Style_guide.html
@@ -66,7 +66,7 @@
             &lt;input type="submit" class="button reset" value="Clear all"&gt;</code>
 
             <h4>Rendered element:</h4>
-            <input type="submit" class="button submit" value="Submit form">
+            <input type="submit" class="button submit" value="Add to Cart">
             <input type="reset" class="button reset" value="Clear all">
       </section>
 
