--- a/Template_Structure/purchase.html
+++ b/Template_Structure/purchase.html
@@ -69,9 +69,12 @@
             					</div>  <!-- Closing the first column of grid in grid-->
 
             					<div class="grid-col-4of10"> <!-- Second column of grid in grid -->
-            						<div class = "image-box"> 
-							           	<p>Content</p>
-									</div> 
+            						<ul>
+							           	<li><h3>James</h3></li>
+							           	<li><p>Cuisine</p></li>
+							           	<li><p class="icon"></p></li>
+							           	<li><input type="submit" class="default-buttom" value="Add to Cart"></li>
+							        </ul>
 								</div> <!-- Closing the second column -->
 
 								<div class="grid-col-4of10"> <!-- Third column of grid in grid-->
@@ -81,9 +84,12 @@
             					</div>  <!-- Closing the third column of grid in grid-->
 
             					<div class="grid-col-4of10"> <!-- Fourth column of grid in grid -->
-            						<div class = "image-box"> 
-							          	<p>Content</p>
-									</div> 
+								        <ul>
+								           	<li><h3>Name</h3></li>
+								           	<li><p>Cuisine</p></li>
+								           	<li><p class="icon"></p></li>
+								           	<li><input type="submit" class="default-buttom" value="Add to Cart"></li>
+								        </ul>
 								</div> <!-- Closing the Fourth column -->
 
           					</div> <!-- Closing our grid in grid -->
@@ -107,21 +113,20 @@
 	            				</div>  
 
 	            				<div class="grid-col-4of10">
-	            					<div class = "image-box"> 
-							           <p>Content</p>
-							        </div> 
+								    <ul>
+									    <li><h3>Name</h3></li>
+									    <li><p>Cuisine</p></li>
+									    <li><p class="icon"></p></li>
+									    <li><input type="submit" class="default-buttom" value="Add to Cart"></li>
+									</ul>
 								</div>
 
 								<div class="grid-col-1of4">
-	            					<div class = "check-box">
-	              						<p>check</p>
-	         						</div>
+	              					<p>check box</p>
 	            				</div>  
 
 								<div class="grid-col-7of10">
-	            					<div class = "fill-area">
-	              						<p>Type area</p>
-	         						</div>
+	              					<p>RESTURANT</p>
 	            				</div>  
 
 	            				<div class="grid-col-1of4">
@@ -131,70 +136,53 @@
 	            				</div>  
 
 								<div class="grid-col-7of10">
-	            					<div class = "fill-area">
-	              						<p>Type area</p>
-	         						</div>
+	              					<input type="text" class="textfield" placeholder="Different location" id="input-location">
 	            				</div>  
+
 
 	            				<div class="grid-col-2of3">
-	            					<div class = "image-box">
-	              						<p>Content</p>
-	         						</div>
+	              					<p>Person1's meal</p>
 	            				</div>  
 
 	            				<div class="grid-col-1of4">
-	            					<div class = "fill-area">
-	              						<p>type area</p>
-	         						</div>
+	              					<input type="text" class="fillarea" placeholder="" id="input-location">
 	            				</div>  
 
 								<div class="grid-col-1of4">
-	            					<div class = "fill-area">
-	              						<p>type area</p>
-	         						</div>
+	              					<input type="text" class="fillarea" placeholder="" id="input-location">
 	            				</div>  
 
 	            				<div class="grid-col-1of4">
-	            					<div class = "fill-area">
-	              						<p>type area</p>
-	         						</div>
+	              					<input type="text" class="fillarea" placeholder="" id="input-location">
 	            				</div>  
 
-
 								<div class="grid-col-2of3">
-	            					<div class = "image-box">
-	              						<p>Content</p>
-	         						</div>
+	              					<p>Person2's meal</p>
 	            				</div> 
 
 	            				<div class="grid-col-1of4">
-	            					<div class = "fill-area">
-	              						<p>type area</p>
-	         						</div>
+	              					<input type="text" class="fillarea" placeholder="" id="input-location">
 	            				</div>  
 
 								<div class="grid-col-1of4">
-	            					<div class = "fill-area">
-	              						<p>type area</p>
-	         						</div>
+	              					<input type="text" class="fillarea" placeholder="" id="input-location">
 	            				</div>  
 
 	            				<div class="grid-col-1of4">
-	            					<div class = "fill-area">
-	              						<p>type area</p>
-	         						</div>
-	            				</div>  
+	              					<input type="text" class="fillarea" placeholder="" id="input-location">
+	            				</div> 
+
+	            				<div class ="grid-col-2of3"> 
+	            					<div class ="placeholder">
+	            						<p></p>
+	            					</div>
+	            				</div>
 
 	            				<div class="grid-col-2of3">
-	            					<div class = "image-box">
-	              						<p>Bottom</p>
-	         						</div>
+	            					<p>TOTAL: $130</p>
 	            				</div>
 
 							</div> 
-
-
-           					
 	        		</div>
 
 	      		</div> <!--Close second column: section 2 end-->
@@ -209,26 +197,28 @@
 	          				<div class="grid-row">
 
 	      						<div class="grid-col-2of3">
-	      							<p>Content<p>
-	            					<div class = "image-box">
-
-	              						<p>Type area</p>
-	         						</div>
+	      							<p>FIRST NAME<p>
+	              					<input type="text" class="textfield" placeholder="" id="input-location">
 	            				</div>
 
 	            				<div class="grid-col-2of3">
-	            					<p>Content<p>
-	            					<div class = "image-box">
-
-	              						<p>Type area</p>
-	         						</div>
+	            					<p>LAST NAME<p>
+	              					<input type="text" class="textfield" placeholder="" id="input-location">
 	            				</div>
 
 	            				<div class="grid-col-2of3">
-	            					<p>Content<p>
-	            					<div class = "image-box">
-	              						<p>Type area</p>
-	         						</div>
+	            					<p>EMAIL<p>
+	              					<input type="text" class="textfield" placeholder="" id="input-location">
+	            				</div>
+
+	            				<div class ="grid-col-2of3"> 
+	            					<div class ="placeholder2">
+	            						<p></p>
+	            					</div>
+	            				</div>
+
+	            				<div class ="grid-col-2of3"> 
+	            				    <input type="submit" class="submit-buttom" value="Process to Payment">
 	            				</div>
 
 					        </div> 
