--- a/Template_Structure/event.html
+++ b/Template_Structure/event.html
@@ -69,14 +69,14 @@
 				<div class = "grid-col-5of10">
 					<div class = "event-box">
 						<h2>Image</h2>
-						<p class="detail-info">Detail information</p>
+						<p class="detail-info">DETAIL INFORMATION</p>
 					</div>
 				</div>
 
 				<div class = "grid-col-5of10">
 					<div class = "event-box">
 						<h2>Image</h2>
-						<p class = "detail-info">Detail information</p>
+						<p class = "detail-info">DETAIL INFORMATION</p>
 					</div>
 				</div>
 			</div>
@@ -85,14 +85,14 @@
 				<div class = "grid-col-5of10">
 					<div class = "event-box">
 						<h2>Image</h2>
-						<p class = "detail-info">Detail information</p>
+						<p class = "detail-info">DETAIL INFORMATION</p>
 					</div>
 				</div>
 
 				<div class = "grid-col-5of10">
 					<div class = "event-box">
 						<h2>Image</h2>
-						<p class = "detail-info">Detail information</p>
+						<p class = "detail-info">DETAIL INFORMATION</p>
 					</div>
 				</div>
 			</div>
