Fixed Footer in previous.html and took out extra closing tag in purchase.html

--- a/Template_Structure/previous.html
+++ b/Template_Structure/previous.html
@@ -10,7 +10,7 @@
 	    <link rel="stylesheet" href="css/grid.css">
 	    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 
-  </head>
+    </head>
 
 	<body>
         <!--navigation bar for website-->
@@ -75,7 +75,7 @@
 			<footer>
 		
 					<div class="grid-row">
-   
+   						<div class = "grid-col-10of10">
 					        <div class = "grid-col-1of3"> 
 								<a class= "web-nav" href="Homepage.html">Copyright</a>
  							</div>
@@ -99,7 +99,7 @@
 					        <div class = "grid-col-1of3">
 								<a class= "web-nav" href="purchase1.html">Career</a>		
 				            </div>
-
+				        </div>
 					</div>
 
 			</footer>
