--- a/Template_Structure/previous.html
+++ b/Template_Structure/previous.html
@@ -53,7 +53,55 @@
 		</div>
 
         <!--Chef image section-->
-        <div class = "chef-list">
+        <ul class="cheflist columns-3">
+            <li>
+                <img src="img/" />
+                <h3>Chef 1</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+            </li>
+            <li>
+                <img src="img/" />
+                <h3>Chef 2</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+            </li>
+            <li>
+                <img src="img/" />
+                <h3>Chef 3</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+            </li>
+            <li>
+                <img src="img/" />
+                <h3>Chef 4</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+            </li>
+             <li>
+                <img src="img/" />
+                <h3>Chef 5</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+            </li>
+            <li>
+                <img src="img/" />
+                <h3>Chef 6</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+            </li>
+            <li>
+                <img src="img/" />
+                <h3>Chef 7</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+            </li>
+            <li>
+                <img src="img/" />
+                <h3>Chef 8</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+            </li>
+            <li>
+                <img src="img/" />
+                <h3>Chef 9</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+            </li>
+        </ul>
+        
+       <!-- <div class = "chef-list">
 
         	<div class = "grid-row">
 	            <div class = "grid-col-1of3">
@@ -69,7 +117,7 @@
 	            </div>
         	</div>
 
-		</div>
+		</div>-->
 
 		<!--footer section-->
 			<footer>
