Added more chef listings and added banner

--- a/Template_Structure/previous.html
+++ b/Template_Structure/previous.html
@@ -52,6 +52,16 @@
 			</div>
 		</div>
 
+        <!--Title-->
+        <div class = "upcoming-list">
+            <div class = "grid-row">
+                <div class = "grid-col-10of10">
+                    <h1>PREVIOUS CHEFS</h1>
+                </div>
+            </div>
+        </div>
+
+        
         <!--Chef image section-->
         <ul class="cheflist columns-3">
             <li>
