Put in image size for a better visual

--- a/Template_Structure/previous.html
+++ b/Template_Structure/previous.html
@@ -65,47 +65,47 @@
         <!--Chef image section-->
         <ul class="cheflist columns-3">
             <li>
-                <img src="img/" />
+                <img src="img/" height="350" width="219"/>
                 <h3>Chef 1</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
             </li>
             <li>
-                <img src="img/" />
+                <img src="img/" height="350" width="219"/>
                 <h3>Chef 2</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
             </li>
             <li>
-                <img src="img/" />
+                <img src="img/" height="350" width="219"/>
                 <h3>Chef 3</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
             </li>
             <li>
-                <img src="img/" />
+                <img src="img/" height="350" width="219"/>
                 <h3>Chef 4</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
             </li>
              <li>
-                <img src="img/" />
+                <img src="img/" height="350" width="219"/>
                 <h3>Chef 5</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
             </li>
             <li>
-                <img src="img/" />
+                <img src="img/" height="350" width="219"/>
                 <h3>Chef 6</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
             </li>
             <li>
-                <img src="img/" />
+                <img src="img/" height="350" width="219"/>
                 <h3>Chef 7</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
             </li>
             <li>
-                <img src="img/" />
+                <img src="img/" height="350" width="219"/>
                 <h3>Chef 8</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
             </li>
             <li>
-                <img src="img/" />
+                <img src="img/" height="350" width="219"/>
                 <h3>Chef 9</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
             </li>
