Updated About page

--- a/Template_Structure/about.html
+++ b/Template_Structure/about.html
@@ -63,11 +63,10 @@
 
         
         <!--Chef image section-->
-        <ul class="cheflist columns-3">
+        <ul class="about">
             <li>
-                <img src="img/" />
-                <h3></h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                <h2>WHO ARE WE?</h2>
+                <p>Chefbound is a Vancouver-based company that promotes various chefs on a weekly basis based on food cultures. This platform allows people like you and me who are interested in trying specialty foods, celebrating a special night, or even hosting an event, to connect with extraordinary chefs. All ingredients used are guarenteed fresh for a healthy and delicious meal you won't forget. If needed, our service even offers food cooked right at your own home.</p>
             </li>
             
         </ul>
