Updated fonts and linked all the pages

--- a/Template_Structure/event.html
+++ b/Template_Structure/event.html
@@ -9,6 +9,7 @@
 	    <link rel="stylesheet" href="css/main.css">
 	    <link rel="stylesheet" href="css/grid.css">
 	    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+        <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
 
   </head>
 
@@ -37,15 +38,15 @@
 				        	</div>
 				       
 				            <div class = "grid-col-1of3">							
-								<a class= "web-nav" href="Homepage.html">UPCOMING</a>					            	
+								<a class= "web-nav" href="event.html">UPCOMING</a>					            	
 				        	</div>
 
 				        	<div class = "grid-col-1of3">
-								<a class= "web-nav" href="Homepage.html">ABOUT</a>
+								<a class= "web-nav" href="about.html">ABOUT</a>
 					    	</div>
 
 					        <div class = "grid-col-1of3">
-								<a class= "web-nav" href="purchase1.html">CART</a>		
+								<a class= "web-nav" href="purchase.html">CART</a>		
 				            </div>
 
 					</div>
