--- a/Template_Structure/homepage.html
+++ b/Template_Structure/homepage.html
@@ -9,6 +9,7 @@
 	    <link rel="stylesheet" href="css/main.css">
 	    <link rel="stylesheet" href="css/grid.css">
 	    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+        <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
 
   </head>
 
@@ -41,7 +42,7 @@
 				        	</div>
 
 				        	<div class = "grid-col-1of3">
-								<a class= "web-nav" href="purchase.html">ABOUT</a>
+								<a class= "web-nav" href="about.html">ABOUT</a>
 					    	</div>
 
 					        <div class = "grid-col-1of3">
