Add expanded page, but styling did not finish yet

--- a/Template_Structure/purchase.html
+++ b/Template_Structure/purchase.html
@@ -14,7 +14,6 @@
 
 		<body>
 
-	        <!--navigation bar for website-->
 			 <!--navigation bar for website-->
 		<div class="header-wrapper">
 
@@ -73,7 +72,7 @@
             						<ul>
 							           	<li><h3>James</h3></li>
 							           	<li><p>Cuisine</p></li>
-							           	<li><p class="icon"></p></li>
+							           	<li><img class = "icon" src="img/" height="30" width="30"/></li>
 							           	<li><input type="submit" class="default-buttom" value="Add to Cart"></li>
 							        </ul>
 								</div> <!-- Closing the second column -->
@@ -88,7 +87,7 @@
 								        <ul>
 								           	<li><h3>Name</h3></li>
 								           	<li><p>Cuisine</p></li>
-								           	<li><p class="icon"></p></li>
+								           	<li><img class = "icon" src="img/" height="30" width="30"/></li>
 								           	<li><input type="submit" class="default-buttom" value="Add to Cart"></li>
 								        </ul>
 								</div> <!-- Closing the Fourth column -->
@@ -123,7 +122,11 @@
 								</div>
 
 								<div class="grid-col-1of4">
-	              					<p>check box</p>
+									<label for="check" /label>
+									<label class="checkbox">
+									    <input type="checkbox" name="check"/>
+									    <span></span>
+									</label>
 	            				</div>  
 
 								<div class="grid-col-7of10">
@@ -131,9 +134,11 @@
 	            				</div>  
 
 	            				<div class="grid-col-1of4">
-	            					<div class = "check-box">
-	              						<p>check</p>
-	         						</div>
+	            					<label for="check" /label>
+										<label class="checkbox">
+										    <input type="checkbox" name="check"/>
+										    <span></span>
+										</label>
 	            				</div>  
 
 								<div class="grid-col-7of10">
