Styling expanded page, but still need to fix the position. Linked home page to expanded page.

--- a/Template_Structure/Expanded.html
+++ b/Template_Structure/Expanded.html
@@ -53,18 +53,20 @@
 		</div>
 
 
-		<div class = "chef-border3">
+		
 
         	<div class = "grid-row">
 
         
 	            <div class = "grid-col-1of4">
-	         		<h2 >Chef1</h2>
+	            	<div class = "chef-border3">
+	         	
 
 	         		<div class ="grid-row">
 	         			<div class ="grid-col-10of10">
 		         			<div class ="grid-col-4of10">
 			         			<ol>
+			         				<li><h2 class ="underline">ALEX</h2></li>
 				         			<li>ITALIAN</li>
 				         			<li>MAY15-22</li>
 				         		</ol>
@@ -88,11 +90,13 @@
 	            	</div>
 
 	            </div>
+			</div>
 
-
+			<div class ="grid-row">
 	            <div class = "grid-col-3of4">
-	            	<h2 class = "chef-border2" />
+	            	<h2 class = "chef-border2"></h2>
 	            </div>
+	        </div>
 	    </div>
 
 		
