linked detail page to expanded, position needs fix

--- a/Template_Structure/Expanded.html
+++ b/Template_Structure/Expanded.html
@@ -61,12 +61,11 @@
 	            <div class = "grid-col-1of4">
 	            	<div class = "chef-border3">
 	         	
-
 	         		<div class ="grid-row">
 	         			<div class ="grid-col-10of10">
 		         			<div class ="grid-col-4of10">
 			         			<ol>
-			         				<li><h2 class ="underline">ALEX</h2></li>
+			         				<li><h2>Chef1</a></h2></li>
 				         			<li>ITALIAN</li>
 				         			<li>MAY15-22</li>
 				         		</ol>
@@ -94,7 +93,7 @@
 
 			<div class ="grid-row">
 	            <div class = "grid-col-3of4">
-	            	<h2 class = "chef-border2"></h2>
+	            	<h2><a  class = "chef-border2" href="details.html"></a></h2>
 	            </div>
 	        </div>
 	    </div>
