--- a/Template_Structure/previous.html
+++ b/Template_Structure/previous.html
@@ -66,46 +66,72 @@
         <!--Chef image section-->
         <ul class="cheflist columns-3">
             <li>
+                <a href="details.html">
                 <img src="img/" height="350" width="219"/>
+                </a>
                 <h3>Chef 1</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
             </li>
             <li>
+                <a href="details.html">
+                <img src="img/" height="350" width="219"/>
+                </a>
                 <img src="img/" height="350" width="219"/>
                 <h3>Chef 2</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
             </li>
             <li>
+                <a href="details.html">
+                <img src="img/" height="350" width="219"/>
+                </a>
                 <img src="img/" height="350" width="219"/>
                 <h3>Chef 3</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
             </li>
             <li>
+                <a href="details.html">
+                <img src="img/" height="350" width="219"/>
+                </a>
                 <img src="img/" height="350" width="219"/>
                 <h3>Chef 4</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
             </li>
              <li>
+                <a href="details.html">
+                <img src="img/" height="350" width="219"/>
+                </a>
                 <img src="img/" height="350" width="219"/>
                 <h3>Chef 5</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
             </li>
             <li>
+                <a href="details.html">
+                <img src="img/" height="350" width="219"/>
+                </a>
                 <img src="img/" height="350" width="219"/>
                 <h3>Chef 6</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
             </li>
             <li>
+                <a href="details.html">
+                <img src="img/" height="350" width="219"/>
+                </a>
                 <img src="img/" height="350" width="219"/>
                 <h3>Chef 7</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
             </li>
             <li>
+                <a href="details.html">
+                <img src="img/" height="350" width="219"/>
+                </a>
                 <img src="img/" height="350" width="219"/>
                 <h3>Chef 8</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
             </li>
             <li>
+                <a href="details.html">
+                <img src="img/" height="350" width="219"/>
+                </a>
                 <img src="img/" height="350" width="219"/>
                 <h3>Chef 9</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
