--- a/Template_Structure/details.html
+++ b/Template_Structure/details.html
@@ -2,7 +2,7 @@
 
 		<head>
 
-			<title>Add to cart</title>
+			<title>Details</title>
 			<meta charset="utf-8">
 			<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
