--- a/Template_Structure/Expanded.html
+++ b/Template_Structure/Expanded.html
@@ -84,7 +84,9 @@
 		         		</div>
 
 		         		<div class = "grid-col-3of10">
-		         			<input type="submit" class="book-buttom" value="Book Chef">
+		         			<a href="purchase.html">
+                            <input type="submit" class="book-buttom" value="Book Chef">
+                            </a>
 		         		</div>
 	            	</div>
 
