Update local branch

--- a/Template_Structure/event.html
+++ b/Template_Structure/event.html
@@ -9,6 +9,7 @@
 	    <link rel="stylesheet" href="css/main.css">
 	    <link rel="stylesheet" href="css/grid.css">
 	    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
+        <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
 
   </head>
 
@@ -37,15 +38,15 @@
 				        	</div>
 				       
 				            <div class = "grid-col-1of3">							
-								<a class= "web-nav" href="Homepage.html">UPCOMING</a>					            	
+								<a class= "web-nav" href="event.html">UPCOMING</a>					            	
 				        	</div>
 
 				        	<div class = "grid-col-1of3">
-								<a class= "web-nav" href="Homepage.html">ABOUT</a>
+								<a class= "web-nav" href="about.html">ABOUT</a>
 					    	</div>
 
 					        <div class = "grid-col-1of3">
-								<a class= "web-nav" href="purchase1.html">CART</a>		
+								<a class= "web-nav" href="purchase.html">CART</a>		
 				            </div>
 
 					</div>
@@ -65,34 +66,38 @@
 
         
         	<div class = "grid-row">
+        		<div class ="grid-col-10of10">
 				<div class = "grid-col-5of10">
 					<div class = "event-box">
 						<h2>Image</h2>
-						<p class="detail-info">Detail information</p>
+						<p class="detail-info">DETAIL INFORMATION</p>
 					</div>
 				</div>
 
 				<div class = "grid-col-5of10">
 					<div class = "event-box">
 						<h2>Image</h2>
-						<p class = "detail-info">Detail information</p>
-					</div>
-				</div>
-
-				<div class = "grid-col-5of10">
-					<div class = "event-box">
-						<h2>Image</h2>
-						<p class = "detail-info">Detail information</p>
-					</div>
-				</div>
-
-				<div class = "grid-col-5of10">
-					<div class = "event-box">
-						<h2>Image</h2>
-						<p class = "detail-info">Detail information</p>
+						<p class = "detail-info">DETAIL INFORMATION</p>
 					</div>
 				</div>
 			</div>
+
+			<div class ="grid-col-10of10">
+				<div class = "grid-col-5of10">
+					<div class = "event-box">
+						<h2>Image</h2>
+						<p class = "detail-info">DETAIL INFORMATION</p>
+					</div>
+				</div>
+
+				<div class = "grid-col-5of10">
+					<div class = "event-box">
+						<h2>Image</h2>
+						<p class = "detail-info">DETAIL INFORMATION</p>
+					</div>
+				</div>
+			</div>
+		</div>
 
 			<!--footer section-->
 			<footer>
