Update images for different webpages

--- a/Template_Structure/event.html
+++ b/Template_Structure/event.html
@@ -68,33 +68,27 @@
         	<div class = "grid-row">
         		<div class ="grid-col-10of10">
 				<div class = "grid-col-5of10">
-					<div class = "event-box">
-						<h2>Image</h2>
+					
+						<img src="img/chef5_event.jpg" height="242" width="657.5"/>
 						<p class="detail-info">DETAIL INFORMATION</p>
-					</div>
+					
 				</div>
 
 				<div class = "grid-col-5of10">
-					<div class = "event-box">
-						<h2>Image</h2>
-						<p class = "detail-info">DETAIL INFORMATION</p>
-					</div>
+					<img src="img/chef8_event.jpg" height="242" width="657.5"/>
+						<p class="detail-info">DETAIL INFORMATION</p>
 				</div>
 			</div>
 
 			<div class ="grid-col-10of10">
 				<div class = "grid-col-5of10">
-					<div class = "event-box">
-						<h2>Image</h2>
-						<p class = "detail-info">DETAIL INFORMATION</p>
-					</div>
+				<img src="img/chef6_event.jpg" height="242" width="657.5"/>
+						<p class="detail-info">DETAIL INFORMATION</p>
 				</div>
 
 				<div class = "grid-col-5of10">
-					<div class = "event-box">
-						<h2>Image</h2>
-						<p class = "detail-info">DETAIL INFORMATION</p>
-					</div>
+					<img src="img/chef7_event.jpg" height="242" width="657.5"/>
+						<p class="detail-info">DETAIL INFORMATION</p>
 				</div>
 			</div>
 		</div>
