--- a/Template_Structure/Expanded.html
+++ b/Template_Structure/Expanded.html
@@ -58,46 +58,11 @@
         	<div class = "grid-row">
 
         
-	            <div class = "grid-col-1of4">
-	            	<div class = "chef-border3">
-	         	
-	         		<div class ="grid-row">
-	         			<div class ="grid-col-10of10">
-		         			<div class ="grid-col-4of10">
-			         			<ol>
-			         				<li><h2>Chef1</a></h2></li>
-				         			<li>ITALIAN</li>
-				         			<li>MAY15-22</li>
-				         		</ol>
-			         		</div>
-
-			         		<div class = "grid-col-5of10">
-			         			<div class ="placeholder3">
-		            			<p></p>
-		            			</div>
-			         		</div>
-
-		         		</div>
-
-		         		<div class = "grid-col-2of10 ">
-		         			<img class ="icon" src="img/" height="30" width="30"/>
-		         		</div>
-
-		         		<div class = "grid-col-3of10">
-		         			<a href="purchase.html">
-                            <input type="submit" class="book-buttom" value="Book Chef">
-                            </a>
-		         		</div>
+	            <div class = "grid-col-10of10">
+	            	<a href="details.html"><img src="img/chef2_resize.jpg" height="623" width="1264"/></a>
 	            	</div>
+			
 
-	            </div>
-			</div>
-
-			<div class ="grid-row">
-	            <div class = "grid-col-3of4">
-	            	<h2><a  class = "chef-border2" href="details.html"></a></h2>
-	            </div>
-	        </div>
 	    </div>
 
 		
