Hover animation for homepage, change chef's name at purchase page

--- a/Template_Structure/purchase.html
+++ b/Template_Structure/purchase.html
@@ -71,8 +71,8 @@
 
             					<div class="grid-col-4of10"> <!-- Second column of grid in grid -->
             						<ul>
-							           	<li><h3>James</h3></li>
-							           	<li><p class = "purchase-info">Cuisine</p></li>
+							           	<li><h3>George</h3></li>
+							           	<li><p class = "purchase-info">American</p></li>
 							           	<li><img class = "calendar" src="img/calendar.png" height="30" width="30"/></li>
 							           	<li><input type="submit" class="default-buttom" value="Add to Cart"></li>
 							        </ul>
@@ -86,8 +86,8 @@
 
             					<div class="grid-col-4of10"> <!-- Fourth column of grid in grid -->
 								        <ul>
-								           	<li><h3>Allen</h3></li>
-								           	<li><p class = "purchase-info">Cuisine</p></li>
+								           	<li><h3>James</h3></li>
+								           	<li><p class = "purchase-info">German</p></li>
 								           	<li><img class = "calendar" src="img/calendar.png" height="30" width="30"/></li>
 								           	<li><input type="submit" class="default-buttom" value="Add to Cart"></li>
 								        </ul>
@@ -128,8 +128,8 @@
 
 	            				<div class="grid-col-4of10">
 								    <ul>
-									    <li><h3>Jenny</h3></li>
-									    <li><p class = "purchase-info">Cuisine</p></li>
+									    <li><h3>James</h3></li>
+									    <li><p class = "purchase-info">German</p></li>
 									 	<li><img class = "calendar" src="img/calendar.png" height="30" width="30"/></li>
 									    <li><input type="submit" class="default-buttom" value="Add to Cart"></li>
 									</ul>
