Changes expanded, event webpage content, add hover effects to heart and buttom

--- a/Template_Structure/Expanded.html
+++ b/Template_Structure/Expanded.html
@@ -59,8 +59,23 @@
 
         
 	            <div class = "grid-col-10of10">
-	            	<a href="details.html"><img src="img/chef2_resize.jpg" height="623" width="1264"/></a>
-	            	</div>
+
+	            	<a href="details.html">
+	            		<figure>
+	            			<img src="img/chef2_resize.jpg" height="623" width="1264" alt="chef"/>
+	            			<figcaption class= "expanded-info">
+		            			<ul>
+		            				<li class = "chef-name2">Danny</li>
+		            				<li class = "information">Australian</li>
+		            				<li class = "information">May 15-22</li>
+		            				<li><img class= "heart" src="img/heart_fill.png" height="30" width="30"/></li>
+		            			</ul>
+		            			 	<input type="submit" class="book-buttom" value="BOOK CHEF">
+	            			
+	            			</figcaption>
+	            		</figure>
+	            	</a>
+	            </div>
 			
 
 	    </div>
