Fix image position, changes on homepage nad event webpage

--- a/Template_Structure/Expanded.html
+++ b/Template_Structure/Expanded.html
@@ -62,7 +62,7 @@
 
 	            	<a href="details.html">
 	            		<figure>
-	            			<img src="img/chef2_resize.jpg" height="623" width="1264" alt="chef"/>
+	            			<img class = "information" src="img/chef2_resize.jpg" height="623" width="1264" alt="chef"/>
 	            			<figcaption class= "expanded-info">
 		            			<ul>
 		            				<li class = "chef-name2">Danny</li>
