--- a/Template_Structure/event.html
+++ b/Template_Structure/event.html
@@ -70,8 +70,8 @@
 				<div class = "grid-col-5of10">
 					<figure>
 	         				<a href="homepage.html">
-	         					<img src="img/chef5_event.jpg" height="242" width="657.5"/>
-				         			<figcaption>
+	         					<img class= "information" src="img/chef5_test.jpg" height="242" width="658"/>
+				         			<figcaption class= "information">
 				         				<p class="chef-name">Jenny</p>
 				         				<p class= "cuisine">Dutch</p>
 				         			</figcaption>	
@@ -83,8 +83,8 @@
 				<div class = "grid-col-5of10">
 					<figure>
 	         				<a href="homepage.html">
-	         					<img src="img/chef8_event.jpg" height="242" width="657.5"/>
-				         			<figcaption>
+	         					<img class= "information" src="img/chef8_event.jpg" height="242" width="658"/>
+				         			<figcaption class= "information">
 				         				<p class="chef-name">Takuya</p>
 				         				<p class= "cuisine">Japanese</p>
 				         			</figcaption>	
@@ -98,8 +98,8 @@
 				<div class = "grid-col-5of10">
 				<figure>
 	         				<a href="homepage.html">
-	         					<img src="img/chef6_event.jpg" height="242" width="657.5"/>
-				         			<figcaption>
+	         					<img class= "information" src="img/chef6_event.jpg" height="242" width="658"/>
+				         			<figcaption class= "information">
 				         				<p class="chef-name">Jack</p>
 				         				<p class= "cuisine">American</p>
 				         			</figcaption>	
@@ -111,8 +111,8 @@
 				<div class = "grid-col-5of10">
 					<figure>
 	         				<a href="homepage.html">
-	         					<img src="img/chef7_event.jpg" height="242" width="657.5"/>
-				         			<figcaption>
+	         					<img class= "information" src="img/chef7_event.jpg" height="242" width="658"/>
+				         			<figcaption class= "information">
 				         				<p class="chef-name">Naomi</p>
 				         				<p class= "cuisine">English</p>
 				         			</figcaption>	
