update grid of purchase webpage

--- a/Template_Structure/purchase.html
+++ b/Template_Structure/purchase.html
@@ -188,9 +188,19 @@
 	              					<input type="text" class="fillarea" placeholder="" id="input-location">
 	            				</div>  
 
-								<div class="grid-col-2of3">
-	              					<h4>Person2's meal</h4>
-	            				</div> 
+								<div class="grid-col-3of10">
+	              					<h4>Person1's meal</h4>
+	            				</div>  
+
+	            				<div class = "grid-col-4of10 placeholder4">
+	            					<p>placeholder</p>
+
+	            				</div>
+
+	            				<div class = "grid-col-1of8">
+	            					<h4>Edited</h4>
+
+	            				</div>
 
 	            				<div class="grid-col-1of4">
 	              					<input type="text" class="fillarea" placeholder="" id="input-location">
