update footer: font size change/update header font color/add "back" buttom/link pages

--- a/Template_Structure/about.html
+++ b/Template_Structure/about.html
@@ -114,7 +114,7 @@
 							</div>
 					        
 					        <div class = "grid-col-1of3">
-								<a class= "web-nav" href="previous.html">Security and Privacy</a>	
+								<a class= "web-nav" href="homepage.html">Security and Privacy</a>	
 				        	</div>
 				       
 				            <div class = "grid-col-1of3">							
@@ -126,7 +126,7 @@
 					    	</div>
 
 					        <div class = "grid-col-1of3">
-								<a class= "web-nav" href="purchase1.html">Career</a>		
+								<a class= "web-nav" href="homgpage.html">Career</a>		
 				            </div>
 				        </div>
 					</div>
