--- a/Template_Structure/details.html
+++ b/Template_Structure/details.html
@@ -199,7 +199,7 @@
 							</div>
 					        
 					        <div class = "grid-col-1of3">
-								<a class= "web-nav" href="previous.html">Security and Privacy</a>	
+								<a class= "web-nav" href="homepage.html">Security and Privacy</a>	
 				        	</div>
 				       
 				            <div class = "grid-col-1of3">							
@@ -211,7 +211,7 @@
 					    	</div>
 
 					        <div class = "grid-col-1of3">
-								<a class= "web-nav" href="purchase1.html">Career</a>		
+								<a class= "web-nav" href="homepage.html">Career</a>		
 				            </div>
 				        </div>
 					</div>
