--- a/Template_Structure/event.html
+++ b/Template_Structure/event.html
@@ -129,27 +129,27 @@
 					<div class="grid-row">
    
 					        <div class = "grid-col-1of3"> 
-								<a class= "web-nav" href="Homepage.html">Copyright</a>
+								<a class= "web-nav" href="homepage.html">Copyright</a>
  							</div>
 
  						    <div class = "grid-col-1of3">
-								<a class= "web-nav" href="Homepage.html">Contact us</a>
+								<a class= "web-nav" href="homepage.html">Contact us</a>
 							</div>
 					        
 					        <div class = "grid-col-1of3">
-								<a class= "web-nav" href="previous.html">Security and Privacy</a>	
+								<a class= "web-nav" href="homepage.html">Security and Privacy</a>	
 				        	</div>
 				       
 				            <div class = "grid-col-1of3">							
-								<a class= "web-nav" href="Homepage.html">Terms of use</a>					            	
+								<a class= "web-nav" href="homepage.html">Terms of use</a>					            	
 				        	</div>
 
 				        	<div class = "grid-col-1of3">
-								<a class= "web-nav" href="Homepage.html">Site map</a>
+								<a class= "web-nav" href="homepage.html">Site map</a>
 					    	</div>
 
 					        <div class = "grid-col-1of3">
-								<a class= "web-nav" href="purchase1.html">Career</a>		
+								<a class= "web-nav" href="homepage.html">Career</a>		
 				            </div>
 
 					</div>
