Update logo and purchase page

--- a/Template_Structure/purchase.html
+++ b/Template_Structure/purchase.html
@@ -23,7 +23,7 @@
 					<div class="grid-row">
    
 					        <div class = "grid-col-1of3"> 
-								<a class= "web-nav" href="Homepage.html">LOGO</a>
+								<a class= "web-nav logo" href="Homepage.html">CHEFBOUND</a>
  							</div>
 
  						    <div class = "grid-col-1of3">
@@ -246,17 +246,22 @@
 	          				<div class="grid-row">
 
 	      						<div class="grid-col-2of3 personal-info">
-	      							<p>FIRST NAME<p>
+                                    <p>FIRST NAME</p>
 	              					<input type="text" class="textfield" placeholder="" id="input-location">
 	            				</div>
 
 	            				<div class="grid-col-2of3">
-	            					<p>LAST NAME<p>
+                                    <p>LAST NAME</p>
 	              					<input type="text" class="textfield" placeholder="" id="input-location">
 	            				</div>
 
 	            				<div class="grid-col-2of3">
-	            					<p>EMAIL<p>
+                                    <p>EMAIL</p>
+	              					<input type="text" class="textfield" placeholder="" id="input-location">
+	            				</div>
+
+                                <div class="grid-col-2of3">
+                                    <p>PHONE NUMBER</p>
 	              					<input type="text" class="textfield" placeholder="" id="input-location">
 	            				</div>
 
