--- a/Template_Structure/Expanded.html
+++ b/Template_Structure/Expanded.html
@@ -23,7 +23,7 @@
 					<div class="grid-row">
    
 					        <div class = "grid-col-1of3"> 
-								<a class= "web-nav" href="Homepage.html">LOGO</a>
+								<a class= "web-nav logo" href="Homepage.html">CHEFBOUND</a>
  							</div>
 
  						    <div class = "grid-col-1of3">
