--- a/Template_Structure/previous.html
+++ b/Template_Structure/previous.html
@@ -67,66 +67,66 @@
         <ul class="cheflist columns-3">
             <li>
                 <a href="details.html">
-                <img src="img/" height="350" width="219"/>
+                <img src="img/chef1_prev.jpg" height="350" width="219"/>
                 </a>
-                <h3>Chef 1</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                <h3>Pierre</h3>
+                <p>Top French Cuisne chef in the world.</p>
             </li>
             <li>
                 <a href="details.html">
-                <img src="img/" height="350" width="219"/>
+                <img src="img/chef_prev2a.jpg" height="350" width="219"/>
                 </a>
-                <h3>Chef 2</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                <h3>Jasmine</h3>
+                <p>Specializing in fusion cuisine!</p>
             </li>
             <li>
                 <a href="details.html">
-                <img src="img/" height="350" width="219"/>
+                <img src="img/chef3_prev.jpg" height="350" width="219"/>
                 </a>
-                <h3>Chef 3</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                <h3>Hector</h3>
+                <p>First place winner of Chef Now!</p>
             </li>
             <li>
                 <a href="details.html">
-                <img src="img/" height="350" width="219"/>
+                <img src="img/chef4_prev.jpg" height="350" width="219"/>
                 </a>
-                <h3>Chef 4</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                <h3>Matsumo</h3>
+                <p>Known for his intricate rolls and dishes.</p>
             </li>
              <li>
                 <a href="details.html">
-                <img src="img/" height="350" width="219"/>
+                <img src="img/chef5_prev.jpg" height="350" width="219"/>
                 </a>
-                <h3>Chef 5</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                <h3>Sambit</h3>
+                <p>Served President Obama before.</p>
             </li>
             <li>
                 <a href="details.html">
-                <img src="img/" height="350" width="219"/>
+                <img src="img/chef6_prev.jpg" height="350" width="219"/>
                 </a>
-                <h3>Chef 6</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                <h3>Felix</h3>
+                <p>Can make a Thai dish in 10 minutes.</p>
             </li>
             <li>
                 <a href="details.html">
-                <img src="img/" height="350" width="219"/>
+                <img src="img/chef7_prev.jpg" height="350" width="219"/>
                 </a>
-                <h3>Chef 7</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                <h3>Minh Nhat</h3>
+                <p>Works like no other at Hyatt Hotel.</p>
             </li>
             <li>
                 <a href="details.html">
-                <img src="img/" height="350" width="219"/>
+                <img src="img/chef8_prev.jpg" height="350" width="219"/>
                 </a>
-                <h3>Chef 8</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                <h3>Wong Hay</h3>
+                <p>Focuses on the fine details.</p>
             </li>
             <li>
                 <a href="details.html">
-                <img src="img/" height="350" width="219"/>
+                <img src="img/chef9_prev.jpg" height="350" width="219"/>
                 </a>
-                <h3>Chef 9</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+                <h3>Susan</h3>
+                <p>If you're happy, she's happy. You matter.</p>
             </li>
         </ul>
         
