--- a/Template_Structure/about.html
+++ b/Template_Structure/about.html
@@ -51,7 +51,7 @@
 				</nav>
 
 			</div>
-		</div>
+		
 
         <!--Title-->
         <div class = "upcoming-list">
@@ -82,6 +82,7 @@
             </div>
         </div>
         </div>
+    </div> <!-- Close header-wrapper-->
        <!-- <div class = "chef-list">
 
         	<div class = "grid-row">
@@ -100,6 +101,8 @@
 
 		</div>-->
 
+        <div class="push"></div>
+        
 		<!--footer section-->
 			<footer>
 		
