Fixed these pages for footer

--- a/Template_Structure/event.html
+++ b/Template_Structure/event.html
@@ -13,8 +13,6 @@
 
   </head>
 
-	</head>
-
 	<body>
         <!--navigation bar for website-->
 		 <!--navigation bar for website-->
@@ -53,7 +51,6 @@
 				</nav>
 
 			</div>
-		</div>
 
 		<!--Title-->
 			<div class = "upcoming-list">
@@ -122,6 +119,9 @@
 				</div>
 			</div>
 		</div>
+    </div>
+    
+        <div class="push"></div>
 
 			<!--footer section-->
 			<footer>
