--- a/Template_Structure/homepage.html
+++ b/Template_Structure/homepage.html
@@ -50,9 +50,7 @@
 					</div>
 				</nav>
 
-			</div>
-		</div>
-
+            </div>
 	
 
         <!--Chef image section-->
@@ -126,6 +124,9 @@
         	</div>
        			
 		</div>
+    </div>
+        
+        <div class="push"></div>
 
 			<!--footer section-->
 			<footer>
