Fixed footer for these 2 pages

--- a/Template_Structure/Expanded.html
+++ b/Template_Structure/Expanded.html
@@ -50,10 +50,6 @@
 				</nav>
 
 			</div>
-		</div>
-
-
-		
 
         	<div class = "grid-row">
 
@@ -82,9 +78,10 @@
 
 	    </div>
 
-		
+      </div> <!-- Close header-wrapper -->
 
-
+<div class="push"></div>
+            
 		<!--footer section-->
 			<footer>
 		
