--- a/Template_Structure/Expanded.html
+++ b/Template_Structure/Expanded.html
@@ -66,7 +66,7 @@
 		            				<li class = "information">May 15-22</li>
 		            				<li><img class= "heart" src="img/heart_fill.png" height="30" width="30"/></li>
                                    
-                                    <li> <a href="details.html"><input type="submit" class="book-buttom" value="BOOK CHEF"></a></li>
+                                    <li> <a href="details1.html"><input type="submit" class="book-buttom" value="BOOK CHEF"></a></li>
                                     <li><a href="homepage.html"><input type="submit" class="book-buttom" value="BACK"></a></li>
 		            			</ul>
 		            			 	
