--- a/Template_Structure/about.html
+++ b/Template_Structure/about.html
@@ -72,6 +72,9 @@
                     <p></p>
             </div>
             <div  class="about grid-col-3of10 middleOf3">
+                <div class="placeholder5">
+	            						<p></p>
+	            </div>
                     <h2 class="about">WHO ARE WE?</h2>
                     <p class="about">Chefbound is a Vancouver-based company that promotes various chefs on a weekly basis based on food cultures. This platform allows people like you and me who are interested in trying specialty foods, celebrating a special night, or even hosting an event, to connect with extraordinary chefs. All ingredients used are guarenteed fresh for a healthy and delicious meal you won't forget. If needed, our service even offers food cooked right at your own home.</p>
 
