--- a/Template_Structure/event.html
+++ b/Template_Structure/event.html
@@ -67,10 +67,10 @@
 				<div class = "grid-col-5of10">
 					<figure>
 	         				<a href="homepage.html">
-	         					<img class= "information" src="img/chef5_test.jpg" height="242" width="658"/>
-				         			<figcaption class= "information">
-				         				<p class="chef-name">Jenny</p>
-				         				<p class= "cuisine">Dutch</p>
+	         					<img class= "information" src="img/chef5_test1.jpg" />
+				         			<figcaption class= "information hidden">
+				         				<p class="chef-name">Kathy</p>
+				         				<p class= "cuisine">Dutch Cuisine</p>
 				         			</figcaption>	
 							</a>
 		         		</figure>
@@ -80,10 +80,10 @@
 				<div class = "grid-col-5of10">
 					<figure>
 	         				<a href="homepage.html">
-	         					<img class= "information" src="img/chef8_event.jpg" height="242" width="658"/>
-				         			<figcaption class= "information">
-				         				<p class="chef-name">Takuya</p>
-				         				<p class= "cuisine">Japanese</p>
+	         					<img class= "information" src="img/chef1.jpg"/>
+				         			<figcaption class= "information hidden">
+				         				<p class="chef-name">Jack</p>
+				         				<p class= "cuisine">Austria Cuisine</p>
 				         			</figcaption>	
 							</a>
 		         		</figure>
@@ -95,10 +95,10 @@
 				<div class = "grid-col-5of10">
 				<figure>
 	         				<a href="homepage.html">
-	         					<img class= "information" src="img/chef6_event.jpg" height="242" width="658"/>
-				         			<figcaption class= "information">
-				         				<p class="chef-name">Jack</p>
-				         				<p class= "cuisine">American</p>
+	         					<img class= "information" src="img/chef_event.jpg" />
+				         			<figcaption class= "information hidden">
+				         				<p class="chef-name">Amy</p>
+				         				<p class= "cuisine">Singapore Cuisine</p>
 				         			</figcaption>	
 							</a>
 		         		</figure>
@@ -108,10 +108,10 @@
 				<div class = "grid-col-5of10">
 					<figure>
 	         				<a href="homepage.html">
-	         					<img class= "information" src="img/chef7_event.jpg" height="242" width="658"/>
-				         			<figcaption class= "information">
-				         				<p class="chef-name">Naomi</p>
-				         				<p class= "cuisine">English</p>
+	         					<img class= "information" src="img/chef_event8.jpg"/>
+				         			<figcaption class= "information hidden">
+				         				<p class="chef-name">Jun</p>
+				         				<p class= "cuisine">Japanese Cuisine</p>
 				         			</figcaption>	
 							</a>
 		         		</figure>
