--- a/Template_Structure/details.html
+++ b/Template_Structure/details.html
@@ -9,7 +9,7 @@
 		    <link rel="stylesheet" href="css/main.css">
 		    <link rel="stylesheet" href="css/grid.css">
 		    <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
-            <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet" type='text/css'>
+            <link href="https://fonts.googleapis.com/css?family=Abel" rel="stylesheet">
 		</head>
 
 		<body>
