Updated About Page and nav

--- a/Template_Structure/about.html
+++ b/Template_Structure/about.html
@@ -62,6 +62,10 @@
             </div>
         </div>
 
+        <!--Banner-->
+        <header class="aboutHeader" role="banner">
+          <img src="img/AboutFull1920.jpg" alt="Banner Image"/>
+        </header>
         
         <!--About Us section-->
         
