Updated header - responsive

--- a/Template_Structure/about.html
+++ b/Template_Structure/about.html
@@ -63,9 +63,8 @@
         </div>
 
         <!--Banner-->
-        <header class="aboutHeader" role="banner">
-          <img src="img/AboutFull1920.jpg" alt="Banner Image"/>
-        </header>
+        <div class="fluid-ratio-resize">
+        </div>
         
         <!--About Us section-->
         
