Created logo and changed all the links

--- a/Template_Structure/about.html
+++ b/Template_Structure/about.html
@@ -24,7 +24,9 @@
 					<div class="grid-row">
    
 					        <div class = "grid-col-1of3"> 
-								<a class= "web-nav" href="Homepage.html">LOGO</a>
+								<a class= "web-nav logo" href="Homepage.html">
+                                    <img src="img/logo.png"/>
+                                </a>
  							</div>
 
  						    <div class = "grid-col-1of3">
@@ -70,20 +72,20 @@
         
         <div class = "chef-list">
         <div class = "grid-row">
-            <div class="about grid-col-3of10 leftOf3">
+            <!--<div class="about grid-col-3of4 leftOf3">
                     <h2></h2>
                     <p></p>
-            </div>
-            <div  class="about grid-col-3of10 middleOf3">
+            </div>-->
+            <div class="about middleOf3">
              
                     <h2 class="about">WHO ARE WE?</h2>
                     <p class="about">Chefbound is a Vancouver-based company that promotes various chefs on a weekly basis based on food cultures. This platform allows people like you and me who are interested in trying specialty foods, celebrating a special night, or even hosting an event, to connect with extraordinary chefs. All ingredients used are guarenteed fresh for a healthy and delicious meal you won't forget. If needed, our service even offers food cooked right at your own home.</p>
 
             </div>
-            <div class="about grid-col-3of10 rightOf3">
+            <!--<div class="about grid-col-3of4 rightOf3">
                     <h2></h2>
                     <p></p>
-            </div>
+            </div>-->
         </div>
         </div>
     </div> <!-- Close header-wrapper-->
