--- a/Template_Structure/details.html
+++ b/Template_Structure/details.html
@@ -24,7 +24,9 @@
 					<div class="grid-row">
    
 					        <div class = "grid-col-1of3"> 
-								<a class= "web-nav" href="Homepage.html">LOGO</a>
+								<a class= "web-nav logo" href="Homepage.html">
+                                    <img src="img/logo.png"/>
+                                </a>
  							</div>
 
  						    <div class = "grid-col-1of3">
