Udated all pages with mobile menu & updated mobile logo

--- a/Template_Structure/about.html
+++ b/Template_Structure/about.html
@@ -20,6 +20,20 @@
 
 			<div class="header-bkgd">
 
+                <!--mobile hamburger nav: hidden when window larger than 400-->
+		                <div class= "grid-col-1of3-mobile-nav">
+							<a href="#top" class="nav-toggle hidden"><img src="img/hamburger_icon.png" height="19" width="20"alt="mobile_nav" /></a>
+					    </div>
+
+
+		                <div class= "grid-col-2of3-mobile-nav">
+							<a href="Homepage.html" class="nav-mobile hidden">
+                                <img src="img/logo.png"/>
+                            </a>
+						</div>
+				    	
+                <!--navigation larger than 400-->    
+                
 				<nav>
 					<div class="grid-row">
    
