--- a/Template_Structure/homepage.html
+++ b/Template_Structure/homepage.html
@@ -27,7 +27,9 @@
 
 
 		                <div class= "grid-col-2of3-mobile-nav">
-							<a href="#top" class="nav-mobile hidden">Logo</a>
+							<a href="Homepage.html" class="nav-mobile hidden">
+                                <img src="img/logo.png"/>
+                            </a>
 						</div>
 				    	
 						<!--navigation larger than 400-->     
