--- a/Template_Structure/event.html
+++ b/Template_Structure/event.html
@@ -26,7 +26,9 @@
 
 
 			                <div class= "grid-col-2of3-mobile-nav">
-								<a href="#top" class="nav-mobile hidden">Logo</a>
+								<a href="#top" class="nav-mobile hidden">
+                                    <img src="img/logo.png"/>
+                                </a>
 							</div>
 					    	
 							<!--navigation larger than 400-->     
@@ -34,7 +36,9 @@
 							<div class="grid-row">
 		    						
 		    						<div class = "grid-col-1of3">
-										<a class= "logo shown" href="Homepage.html">LOGO</a>
+										<a class= "web-nav logo" href="Homepage.html">
+                                            <img src="img/logo.png"/>
+                                        </a>
 									</div>
 
 		 						    <div class = "grid-col-1of3">
