--- a/Template_Structure/Expanded.html
+++ b/Template_Structure/Expanded.html
@@ -130,8 +130,10 @@
 					</div>
 
 			</footer>
-
-
+            
+            <!--javascript for mobile menu-->
+		    <script src="js/jquery.js"></script>
+		    <script src="js/menu.js"></script>
 
 	</body>
 </html>
