--- a/Template_Structure/about.html
+++ b/Template_Structure/about.html
@@ -156,6 +156,10 @@
 
 			</footer>
 
+        <!--javascript for mobile menu-->
+        <script src="js/jquery.js"></script>
+        <script src="js/menu.js"></script>
+        
 	</body>
 </html>
 
