--- a/Template_Structure/details.html
+++ b/Template_Structure/details.html
@@ -240,5 +240,9 @@
                 
 			</footer>
 
+            <!--javascript for mobile menu-->
+		    <script src="js/jquery.js"></script>
+		    <script src="js/menu.js"></script>
+            
 		</body>
 	</html>
