--- a/Template_Structure/details1.html
+++ b/Template_Structure/details1.html
@@ -238,5 +238,9 @@
                 
 			</footer>
 
+            <!--javascript for mobile menu-->
+		    <script src="js/jquery.js"></script>
+		    <script src="js/menu.js"></script>
+            
 		</body>
 	</html>
